# Open-and-Adaptive-Fitness-Agent

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/: dependencies.py
app/api/routes/: agent.py  health.py  metrics.py  notifications.py  progress.py  recommendations.py  workout.py
app/config/: settings.py
app/core/: events.py
app/core/analytics_engine/: engine.py
app/core/event_engine/: dispatcher.py  events.py  handlers.py
app/core/notification_engine/: engine.py
app/core/orchestration_bridge/: bridge.py
app/core/progression_engine/: engine.py
app/core/recommendation_engine/: engine.py
app/core/recovery_engine/: engine.py
app/core/scheduler_engine/: engine.py
app/core/state_engine/: engine.py
app/db/: __init__.py  health.py
app/integrations/crewai/: adapter.py
app/integrations/langchain/: adapter.py
app/integrations/mcp/: __init__.py  server.py  tools.py
app/integrations/openai_agents/: adapter.py
app/integrations/openclaw/: __init__.py  actions.py  (+3 more)
app/memory/: __init__.py  memory_service.py
app/models/: orm_models.py
app/notifications/: service.py
app/persistence/: database.py
app/scheduler/: __init__.py  runtime.py
app/schemas/: schemas.py
app/services/: fitness_service.py
app/utils/: helpers.py  logging.py  retry.py
docs/: architecture.md
scripts/: start.sh
tests/: conftest.py  test_analytics_engine.py  test_api.py  test_event_engine.py  test_progression_engine.py  test_recommendation_engine.py  test_recovery_engine.py  test_scheduler_engine.py  test_state_engine.py
(+6 files in other folders)
